fixed overflow bug

--- a/public/static/styles/sass/layout.scss
+++ b/public/static/styles/sass/layout.scss
@@ -24,6 +24,7 @@ p, ul {
 }
 
 .venue__header {
+    position: relative;
 
     h1 {
         margin: .5rem 0;
@@ -43,6 +44,7 @@ p, ul {
         bottom: 0;
         right: 0;
         background: rgba(0, 0, 0, 0.7);
+        z-index: 1;
     }
 
     &-info {
